# Edu-More-AI

./: .gitignore  client_test.py  day11_infermain.py  edumore_llm_fastapi.py  fastmain.py  get_hand_landmark.py  llm_fastapi_example.ipynb  main.py  main_test.py  pyproject.toml  struggle.py  test1.py
preprocessing/: mediapipe_hands.py
socket/: edumore_socket.py
training/: .hands.pkl  pred_mediapipe_LightGBM.py  pred_mediapipe_xgboost.py  train_mediapipe_LightGBM copy.ipynb  train_mediapipe_LightGBM.ipynb  train_mediapipe_xgboost.ipynb
training/models/: hands.pkl
