[project]
name = "edu-more"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "jupyter>=1.1.1",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "uvicorn>=0.37.0",
]
