[project]
name = "edu-more-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "mediapipe>=0.10.21",
    "noisereduce>=3.0.3",
    "openai>=1.109.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.37.0",
    "xgboost>=3.0.5",
]
